Fix photo stretching on store page

--- a/src/assets/styles/pages/_store.scss
+++ b/src/assets/styles/pages/_store.scss
@@ -11,7 +11,7 @@
 
   &__frame-image {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     border-radius: 20px;
     overflow: hidden;
 
